import "CertificateInfoV2.proto";
package Diadoc.Api.Proto;

message CertificateList {
	repeated CertificateInfoV2 Certificates = 1;
}